2010-09-04 Jerome Pasquier  <rainbru@free.fr>

	* src/client/gsconnection.cpp: Can now be built with new OgreGui but need
	some ugky hach for BetaGUI::Button.
	* src/client/gsmainmenu.cpp: Can now be built with new OgreGui.

2010-08-22 Jerome Pasquier  <rainbru@free.fr>

	* src/client/gsmainmenu.cpp: Trying to fix name conflict with oldOgreGui
	and OgreGui to test drawing implementation.

2010-08-21 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Window.cpp: Base implementation.
	* src/ogreGui/Window.hpp: Base implementation.
	
2010-08-17 Jerome Pasquier  <rainbru@free.fr>

	* src/tests/ogreGui/DrawableTestWithOgre: Contains Ogre-based unit tests.
	
	* src/tests/ogreGui/DrawableTest: SkinnableTexture-related tests work.

	* src/tests/helpers/OgreMinimalSetup.cpp (teardownOgre): Delete Pgre::Logger
	instance to prevent a segfault in second setup.

	* src/tests/helpers/OgreMinimalSetup.cpp (teardownOgre): Implementation finished.

	* src/tests/helpers/main.cpp: Simply use OgreMinimalSetup for valgrind tests.
	
	* src/tests/helpers/OgreMinimalSetup.cpp: Implementation started.
	* src/tests/helpers/OgreMinimalSetup.hpp: Implementation started.
	* src/Makefile.am (SUBDIRS): added helpers and oreGui.

2010-08-14 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/TextureNotFoundException: Implementation.

2010-07-24 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Drawable.cpp (setSkinName): if vSkinName is empty, take
	the parent skin name.

	* src/ogreGui/Drawable.cpp (getSkinName): implementation.
	* src/ogreGui/Drawable.cpp (setTexturePtr): implementation.
	* src/ogreGui/Drawable.cpp (getTexturePtr): implementation.

2010-07-24 Jerome Pasquier  <rainbru@free.fr>

	* src/maincore/gameengine.cpp (getGuiTransparency): get 
	mGuiTransparency member value.
	* src/maincore/gameengine.cpp (setGuiTransparency): change 
	mGuiTransparency member value.
	* src/maincore/gameengine.cpp (draw): Draw the actual game state.
