@@ -42,11 +42,12 @@
 
 // Forward declarations
 namespace BetaGUI {
-  class TextInput;
+  //  class TextInput;
 }
 namespace RainbruRPG{
   namespace OgreGui{
     class PushButton;
+    class Window;
   }
 }
 // End of forward declarations
@@ -54,6 +55,7 @@ namespace RainbruRPG{
 // A hack to make the object built
 namespace BetaGUI{
   typedef void Button;
+  typedef void TextInput;
 }
 
 using namespace RainbruRPG::OgreGui;
@@ -100,9 +102,9 @@ namespace RainbruRPG {
       PushButton* btnBack; 
 
       /** The main OgreGUI window */
-      Window* window;
+      RainbruRPG::OgreGui::Window* window;
       /** The OgreGUI window containing the Back button */
-      Window* winBack;
+      RainbruRPG::OgreGui::Window* winBack;
       /** The widget where the user name is entered */
       TextInput* tiUserName;
       /** The widget where the password is entered */
